--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "author": "Reed Barger",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "2.12.0",
+    "@prisma/client": "^2.12.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -41,6 +41,7 @@
     "@babel/register": "^7.10.4",
     "@prisma/cli": "2.12.0",
     "concurrently": "^5.3.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "prisma": "^3.2.1"
   }
 }
